; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/src/extr_cmsopt.c_Eval16nop1D.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/src/extr_cmsopt.c_Eval16nop1D.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._cms_interp_struc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct._cms_interp_struc*, i32*, i32*, %struct._cms_interp_struc*)* @Eval16nop1D to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Eval16nop1D(%struct._cms_interp_struc* %0, i32* %1, i32* %2, %struct._cms_interp_struc* %3) #0 {
  %5 = alloca %struct._cms_interp_struc*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct._cms_interp_struc*, align 8
  store %struct._cms_interp_struc* %0, %struct._cms_interp_struc** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store %struct._cms_interp_struc* %3, %struct._cms_interp_struc** %8, align 8
  %9 = load %struct._cms_interp_struc*, %struct._cms_interp_struc** %5, align 8
  %10 = call i32 @cmsUNUSED_PARAMETER(%struct._cms_interp_struc* %9)
  %11 = load i32*, i32** %6, align 8
  %12 = getelementptr inbounds i32, i32* %11, i64 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32*, i32** %7, align 8
  %15 = getelementptr inbounds i32, i32* %14, i64 0
  store i32 %13, i32* %15, align 4
  %16 = load %struct._cms_interp_struc*, %struct._cms_interp_struc** %8, align 8
  %17 = call i32 @cmsUNUSED_PARAMETER(%struct._cms_interp_struc* %16)
  ret void
}

declare dso_local i32 @cmsUNUSED_PARAMETER(%struct._cms_interp_struc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
